--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -119,6 +119,13 @@
                 <label for="kubeform">Kubeform</label>
               </div>
               <!-- single ac-checkbox end -->
+
+              <!-- single ac-checkbox start  -->
+              <div class="ac-single-checkbox">
+                <input class="is-checkradio ac-checkbox" id="voyager" type="checkbox" name="checkbox" />
+                <label for="voyager">Voyager</label>
+              </div>
+              <!-- single ac-checkbox end -->
             </div>
           </div>
           <!-- collapsable menu end -->
