--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -12197,6 +12197,10 @@ ul.social-share-button li a i.fa {
     margin-bottom: 20px;
     line-height: 1.6;
   }
+  .blog-content iframe {
+    width: 300px !important;
+    height: 200px !important;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1023.98px) {
@@ -12210,9 +12214,9 @@ ul.social-share-button li a i.fa {
   .wizerd-items {
     top: 70px;
   }
-  iframe {
-    width: 100%;
-    height: auto;
+  .blog-content iframe {
+    width: 400px !important;
+    height: 225px !important;
   }
   .single-wizard.ml-30 {
     margin-left: 0 !important;
@@ -12257,9 +12261,13 @@ ul.social-share-button li a i.fa {
   .single-wizard .single-recent-blog .date-month .month {
     font-size: 14px;
   }
+  .blog-content iframe {
+    width: 510px !important;
+    height: 286.88px !important;
+  }
 }
 
-@media (min-width: 1216px) and (max-width: 1407) {
+@media (min-width: 1216px) and (max-width: 1407px) {
   .blog-details-area h1 {
     font-size: 32px;
     letter-spacing: -1.5px;
@@ -12277,6 +12285,14 @@ ul.social-share-button li a i.fa {
   }
   .single-wizard .single-recent-blog .date-month .month {
     font-size: 14px;
+  }
+  .blog-content iframe {
+    width: 500px !important;
+    height: 281px !important;
+  }
+  .blog-content iframe {
+    width: 660px !important;
+    height: 371.25px !important;
   }
 }
 
@@ -12298,6 +12314,10 @@ ul.social-share-button li a i.fa {
   }
   .single-wizard .single-recent-blog .date-month .month {
     font-size: 14px;
+  }
+  .blog-content iframe {
+    width: 700px !important;
+    height: 393.75px !important;
   }
 }
 
