--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -93,7 +93,7 @@
               <div class="recent-blog-content">
                 <h2 class="is-ellipsis-2"><a href="{{.RelPermalink}}">{{.Title}}</a></h2>
                 {{ range $author := first 1 .Params.authors }}
-                <div class="meta">By - <a href="/authors/{{ $author | urlize }}"> {{$author}} </a></div>
+                <div class="meta"><span class="pr-5">By</span> <a href="/authors/{{ $author | urlize }}"> {{ $author }} </a></div>
                 {{ end }}
               </div>
               <!-- content  -->
