Add lazy loading attribute in html tags
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -88,7 +88,8 @@
             <div class="navbar-left">
               <div class="navbar-brand">
                 <a href="{{.Site.Params.domain_bytebuilders}}">
-                  <img src="{{ .Site.Data.products.bytebuilders.logo.src }}" alt="img" />
+                  <img src="{{ .Site.Data.products.bytebuilders.logo.src }}" alt="img" loading="lazy"
+                    decoding="async" loading="lazy" decoding="async" />
                 </a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                   <span aria-hidden="true"></span>
@@ -208,7 +209,7 @@
               <!-- logo start -->
               <div class="footer-logo">
                 <a href="{{.Site.Params.domain_appscode}}"><img src="{{$.Site.Data.products.appscode.logo.src}}"
-                    alt="{{$.Site.Data.products.appscode.logo.alt}}" class="img" /></a>
+                    alt="{{$.Site.Data.products.appscode.logo.alt}}" class="img" loading="lazy" decoding="async"/></a>
               </div>
               <!-- logo end -->
 
