--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -8,7 +8,7 @@
       <div class="column is-8 is-offset-2 has-text-centered">
         <div class="author-content" data-aos="fade-up" data-aos-duration="500">
           <figure class="image">
-            <img src="{{ $author.profile }}" />
+            <img src="{{ $author.profile }}" loading="lazy" decoding="async" />
           </figure>
           <h3 data-aos="fade-up" data-aos-duration="600">{{ $author.name }}</h3>
           <p data-aos="fade-up" data-aos-duration="800">
@@ -65,9 +65,18 @@
             <!-- viewing type  -->
             <div class="viewing-mode">
               <label>VIEW</label>
-              <button id="grid-btn-view" class="is-active"><span
-                  class="material-symbols-outlined">grid_view</span></button>
-              <button id="list-btn-view"><span class="material-symbols-outlined">list</span></button>
+              <button id="grid-btn-view" class="is-active"><span class="material-symbols-outlined">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                    <path
+                      d="M3 11V3h8v8Zm0 10v-8h8v8Zm10-10V3h8v8Zm0 10v-8h8v8ZM5 9h4V5H5Zm10 0h4V5h-4Zm0 10h4v-4h-4ZM5 19h4v-4H5ZM15 9Zm0 6Zm-6 0Zm0-6Z" />
+                  </svg>
+                </span></button>
+              <button id="list-btn-view"><span class="material-symbols-outlined">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                    <path
+                      d="M4 17q-.425 0-.712-.288Q3 16.425 3 16t.288-.713Q3.575 15 4 15t.713.287Q5 15.575 5 16t-.287.712Q4.425 17 4 17Zm0-4q-.425 0-.712-.288Q3 12.425 3 12t.288-.713Q3.575 11 4 11t.713.287Q5 11.575 5 12t-.287.712Q4.425 13 4 13Zm0-4q-.425 0-.712-.288Q3 8.425 3 8t.288-.713Q3.575 7 4 7t.713.287Q5 7.575 5 8t-.287.712Q4.425 9 4 9Zm3 8v-2h14v2Zm0-4v-2h14v2Zm0-4V7h14v2Z" />
+                  </svg>
+                </span></button>
             </div>
             <!-- viewing type  -->
           </div>
@@ -247,9 +256,10 @@
             <div class="column is-4 each-blog">
               <div class="single-blog">
                 {{ $original := $p.Resources.GetMatch "hero.jpg" }}
-                {{ $cropped := $original.Resize "x200" }}
+                {{ $cropped := $original.Resize "x170" }}
                 <figure class="image">
-                  <a href="{{ $p.RelPermalink }}"><img src="{{ $cropped.RelPermalink }}" alt=""></a>
+                  <a href="{{ $p.RelPermalink }}"><img src="{{ $cropped.RelPermalink }}" alt="" loading="lazy"
+                      decoding="async"></a>
                 </figure>
                 <div class="p-15">
                   <!-- meta description  -->
@@ -289,9 +299,10 @@
             <div class="columns each-blog">
               <div class="column is-6">
                 <figure class="blog-banner image">
-                  {{ $image := $p.Resources.GetMatch "hero.jpg" }}
+                  {{ $original := $p.Resources.GetMatch "hero.jpg" }}
+                  {{ $cropped := $original.Resize "x250" }}
                   <a href="{{ $p.RelPermalink }}">
-                    <img src="{{ $image.RelPermalink }}" alt="appscode-blog"></a>
+                    <img src="{{ $cropped.RelPermalink }}" alt="appscode-blog" loading="lazy" decoding="async"></a>
                 </figure>
 
               </div>
