--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -65,6 +65,19 @@
   <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
   {{ end }}
   <!-- <link rel="stylesheet" href="/assets/sass/main.css" /> -->
+  
+      <script>
+        (function () {
+          var zi = document.createElement('script');
+          zi.type = 'text/javascript';
+          zi.async = true;
+          zi.referrerPolicy = 'unsafe-url';
+          zi.src = 'https://ws.zoominfo.com/pixel/63344a0551510bcd6667d667';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(zi, s);
+        })();
+      </script>
+    
 </head>
 
 <body>
@@ -398,6 +411,10 @@
   </script>
   <!--End of Tawk.to Script-->
 
+      <noscript>
+        <img src="https://ws.zoominfo.com/pixel/63344a0551510bcd6667d667" width="1" height="1" style="display: none;" alt="websights"/>
+      </noscript>
+    
 </body>
 
 </html>
