Add clearbit script
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -65,7 +65,9 @@
   <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
   {{ end }}
   <!-- <link rel="stylesheet" href="/assets/sass/main.css" /> -->
-  
+
+<script src="https://tag.clearbitscripts.com/v1/pk_81079761ad5191fbdb09e9f13ff41927/tags.js"></script>
+
       <script>
         (function () {
           var zi = document.createElement('script');
