--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,15 @@
 <html lang="en">
 
 <head>
-  {{ template "_internal/google_analytics_async.html" . }}
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5J3WVDEFB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-R5J3WVDEFB');
+  </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -65,21 +73,7 @@
   <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
   {{ end }}
   <!-- <link rel="stylesheet" href="/assets/sass/main.css" /> -->
-
-<script src="https://tag.clearbitscripts.com/v1/pk_81079761ad5191fbdb09e9f13ff41927/tags.js"></script>
-
-      <script>
-        (function () {
-          var zi = document.createElement('script');
-          zi.type = 'text/javascript';
-          zi.async = true;
-          zi.referrerPolicy = 'unsafe-url';
-          zi.src = 'https://ws.zoominfo.com/pixel/63344a0551510bcd6667d667';
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(zi, s);
-        })();
-      </script>
-    
+  <script src="https://tag.clearbitscripts.com/v1/pk_81079761ad5191fbdb09e9f13ff41927/tags.js"></script>
 </head>
 
 <body>
@@ -412,11 +406,5 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
-
-      <noscript>
-        <img src="https://ws.zoominfo.com/pixel/63344a0551510bcd6667d667" width="1" height="1" style="display: none;" alt="websights"/>
-      </noscript>
-    
 </body>
-
 </html>
