--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -81,6 +81,17 @@
   {{ end }}
   <!-- <link rel="stylesheet" href="/assets/sass/main.css" /> -->
   <script src="https://tag.clearbitscripts.com/v1/pk_81079761ad5191fbdb09e9f13ff41927/tags.js"></script>
+  <script>
+    (function () {
+      var zi = document.createElement('script');
+      zi.type = 'text/javascript';
+      zi.async = true;
+      zi.referrerPolicy = 'unsafe-url';
+      zi.src = 'https://ws.zoominfo.com/pixel/63344a0551510bcd6667d667';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(zi, s);
+    })();
+  </script>
 </head>
 
 <body>
@@ -400,8 +411,6 @@
   <!-- Main JS -->
   <script src="/assets/js/main.js"></script>
 
-
-
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {},
@@ -417,5 +426,8 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
+  <noscript>
+    <img src="https://ws.zoominfo.com/pixel/63344a0551510bcd6667d667" width="1" height="1" style="display: none;" alt="websights"/>
+  </noscript>
 </body>
 </html>
