Update blog title ellipsis-3 and fix some CSS
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -32,7 +32,7 @@
           <div class="column is-5">
             <div class="blog-title-content">
               <!-- title  -->
-              <h1 class="is-ellipsis-2" data-aos="fade-up" data-aos-duration="500"><a
+              <h1 class="is-ellipsis-3" data-aos="fade-up" data-aos-duration="500" title="{{ $p.Title }}"><a
                   href="{{ $p.RelPermalink }}">{{ $p.Title }}</a></h1>
               <!-- title  -->
 
@@ -328,7 +328,8 @@
                   </div>
                   <!-- meta description  -->
 
-                  <h2 class="is-ellipsis-2"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a></h2>
+                  <h2 class="is-ellipsis-2" title="{{ $p.Title }}"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a>
+                  </h2>
                   <p class="is-ellipsis-3">{{ $p.Summary }}</p>
                   <a href="{{ $p.RelPermalink }}" class="inline-button">READ MORE <i class="fa fa-arrow-right"></i></a>
                 </div>
@@ -378,7 +379,8 @@
                   </div>
                   <!-- meta description  -->
                   <!-- title  -->
-                  <h2 class="is-ellipsis-2"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a></h2>
+                  <h2 class="is-ellipsis-2" title="{{ $p.Title }}"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a>
+                  </h2>
                   <!-- title  -->
 
 
