--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -279,7 +279,8 @@
                   </div>
                   <!-- meta description  -->
 
-                  <h2 class="is-ellipsis-2"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a></h2>
+                  <h2 class="is-ellipsis-2" title="{{ $p.Title }}"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a>
+                  </h2>
                   <p class="is-ellipsis-3">{{ $p.Summary }}</p>
                   <a href="{{ $p.RelPermalink }}" class="inline-button">READ MORE <i class="fa fa-arrow-right"></i></a>
                 </div>
@@ -333,7 +334,8 @@
                   </div>
                   <!-- meta description  -->
                   <!-- title  -->
-                  <h2 class="is-ellipsis-2"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a></h2>
+                  <h2 class="is-ellipsis-2" title="{{ $p.Title }}"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a>
+                  </h2>
                   <!-- title  -->
 
 
