Remove Marketplace link from menu
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -131,9 +131,9 @@
             <div class="navbar-right">
               <div class="is-flex is-align-items-center is-justify-content-space-between is-fullwidth">
                 <ul>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a href="{{.Site.Params.domain_marketplace}}" target="_blank" class="link">Marketplace</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                     <a href="{{.Site.Params.blog_url}}" target="_blank" class="link">Blog</a>
                   </li>
