--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,31 +5,14 @@
 {{- $pages := $pctx.RegularPages -}}
 
 <!--============================== hero area 2022 start  ==============================-->
-<section class="hero-area-blog mt-100">
+<section class="hero-area-blog pt-100" style="background-image: url(/assets/images/bg-image/hero-bg.png);">
   <div class="container">
-    <div class="slider-wrapper owl-carousel">
-      {{ range $idx, $p := $pages.ByDate.Reverse | first 4 }}
+    <div class="slider-wrapper" >
+      {{ range $idx, $p := $pages.ByDate.Reverse | first 1 }}
       <div class="single-slider">
         <div class="columns is-vcentered is-multiline single-blog-carousel">
-          <div class="column is-7">
-
-            <div class="hero-area-thumbnail" data-aos="fade-in" data-aos-duration="500">
-              <figure class="blog-banner image is-16by9">
-                {{ $original := $p.Resources.GetMatch "hero.jpg" }}
-                {{ $cropped := $original.Resize "x450" }}
-                <a href="{{ $p.RelPermalink }}">
-                  <img src="{{ $cropped.RelPermalink }}" alt="appscode-blog" loading="lazy" decoding="async"></a>
-              </figure>
-
-              <!-- slider-button start  -->
-              <!-- <div class="slider-button">
-          <button class="slide carousel-button"><img src="/assets/images/icons/arrow.svg" alt="arrow"></button>
-        </div> -->
-              <!-- slider-button end -->
-            </div>
-
-          </div>
-          <div class="column is-5">
+          
+          <div class="column is-8">
             <div class="blog-title-content">
               <!-- title  -->
               <h1 class="is-ellipsis-3" data-aos="fade-up" data-aos-duration="500" title="{{ $p.Title }}"><a
@@ -62,34 +45,11 @@
               <a class="inline-button" href="{{ $p.RelPermalink }}" data-aos="fade-up" data-aos-duration="800">READ MORE
                 <i class="fa fa-arrow-right"></i></a>
               <!-- summary  -->
-
-              <!-- share with  -->
-              <div class="social-share" data-aos="fade-up" data-aos-duration="900">
-                <label>Share with:</label>
-                <ul class="social-share-button">
-                  <li>
-                    <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank"
-                      title="Share on Twitter" rel="noopener" class="twitter" aria-label="share on Twitter"><i
-                        class="fa fa-twitter" aria-hidden="true"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}&summary={{ .Summary }}"
-                      target="_blank" title="Share on Linkedin" rel="noopener" class="linkedin"><i
-                        class="fa fa-linkedin" aria-hidden="true"></i></a>
-                  </li>
-                  <li>
-                    <a href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" target="_blank"
-                      title="Share on Facebook" rel="noopener" class="facebook" aria-label="share on Facebook"><i
-                        class="fa fa-facebook" aria-hidden="true"></i></a>
-                  </li>
-                  <li>
-                    <a href="mailto:?subject={{ .Title | htmlEscape }}&body={{ .Permalink | htmlEscape }}"><i
-                        class="fa fa-envelope-o" aria-hidden="true" title="Share on Email"></i></a>
-                  </li>
-                </ul>
-              </div>
-              <!-- share with  -->
             </div>
+          </div>
+
+          <div class="column is-4">
+            <div class="author">Author</div>
           </div>
         </div>
       </div>
